# datasette-sqlite-authorizer

./: README.md  pyproject.toml
.github/workflows/: test.yml
datasette_sqlite_authorizer/: __init__.py
tests/: conftest.py  test_sqlite_authorizer.py
