[project]
name = "datasette-sqlite-authorizer"
version = "0.1"
description = "Configure Datasette to block operations using the SQLite set_authorizer mechanism"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette"
]

[project.urls]
Homepage = "https://github.com/simonw/datasette-sqlite-authorizer"
Changelog = "https://github.com/simonw/datasette-sqlite-authorizer/releases"
Issues = "https://github.com/simonw/datasette-sqlite-authorizer/issues"
CI = "https://github.com/simonw/datasette-sqlite-authorizer/actions"

[project.entry-points.datasette]
sqlite_authorizer = "datasette_sqlite_authorizer"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
